--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,11 +1,9 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: 发布到npm
 
 on:
-  release:
-    types: [created]
+ release:
+    types: [created] 
 
 jobs:
   build:
@@ -17,6 +15,7 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm test
+      - run: npm run build
 
   publish-npm:
     needs: build
@@ -30,4 +29,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: 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
