--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,32 +1,20 @@
-
-name: 发布到npm
+name: Node.js Package
 
 on:
- release:
-    types: [created] 
+  release:
+    types: [created]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org/'
       - run: npm ci
       - run: npm test
-      - run: npm run build
-
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: 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
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
